--- a/src/components/Modal/src/index.less
+++ b/src/components/Modal/src/index.less
@@ -7,6 +7,7 @@
     bottom: 0 !important;
     left: 0 !important;
     width: 100% !important;
+    max-width: unset;
     height: 100%;
 
     &-content {
@@ -54,7 +55,13 @@
   }
 
   &-content {
+    display: flex;
+    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+  }
+
+  &-body {
+    flex: 1;
   }
 
   &-footer {
@@ -70,9 +77,9 @@
 
   &-close-x {
     display: inline-block;
-    width: 96px;
-    height: 56px;
-    line-height: 56px;
+    width: 88px;
+    height: 42px;
+    line-height: 42px;
   }
 
   &-confirm-body {
