--- a/src/design/ant/btn.less
+++ b/src/design/ant/btn.less
@@ -19,9 +19,9 @@
     }
   }
 
-  &-primary:not(&-background-ghost, [disabled]) {
-    color: @white;
-  }
+  // &-primary:not(&-background-ghost, [disabled]) {
+  //   color: @white;
+  // }
 
   &-default {
     color: @button-cancel-color;
